# aiobrultech-serial

./: .gitignore  .pre-commit-config.yaml  Earthfile  LICENSE  README.md  earthly.sh  pyproject.toml  pyrightconfig.json  renovate.json  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: auto-merge.yml  build.yml  lint.yml  publish.yml
aiobrultech_serial/: __init__.py  exceptions.py
scripts/: dump.py  version_bump.py
tests/: test_connection.py  test_requirements.py
typings/serial_asyncio/: __init__.pyi
