[metadata]
name = aiobrultech-serial
version = 0.4.0a0
author = Shawn Wilsher
author_email = me@shawnwilsher.com
description = A Python client library to talk with Brultech Devices over a serial connection
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
classifiers = 
	Development Status :: 4 - Beta
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
project_urls = 
	Bug Reports = https://github.com/sdwilsh/aiobrultech-serial/issues
	Release Notes = https://github.com/sdwilsh/aiobrultech-serial/releases/
	Source = https://github.com/sdwilsh/aiobrultech-serial

[options]
python_requires = >=3.8, <4
packages = find:
install_requires = 
	pyserial >= 3.5
	pyserial-asyncio == 0.5
	siobrultech-protocols == 0.2.0

[flake8]
max-line-length = 88
max-complexity = 10
select = E9,F63,F7,F82

